--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /CvUpSolution/LuceneLibrary/Index
+/CvUpSolution/CvUpAPI/bin
+/CvUpSolution/CvUpAPI/obj
