--- a/CvUpSolution/CvUpAPI/appsettings.json
+++ b/CvUpSolution/CvUpAPI/appsettings.json
@@ -12,7 +12,7 @@
     "fromAddress": "cvup.files@gmail.com"
   },
   "Jwt": {
-    "Key": "78yfhO:LDG-789%$sdf^d&",
+    "SecretKey": "78yfhO:LDG-789%$sdf^d&",
     "Issuer": "Tamir",
     "Audience": "https://localhost:7217",
     "Subject": "JWTServiceAccessToken"
