--- a/CvUpSolution/CvsPositionsLibrary/CvsPositionsLibrary.csproj
+++ b/CvUpSolution/CvsPositionsLibrary/CvsPositionsLibrary.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
-    <ProjectReference Include="..\EmailsLibrary\EmailsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
