--- a/CvUpSolution/CvsWorkerService/CvsWorkerService.csproj
+++ b/CvUpSolution/CvsWorkerService/CvsWorkerService.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CvsPositionsLibrary\CvsPositionsLibrary.csproj" />
+    <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
     <ProjectReference Include="..\ImportCvsLibrary\ImportCvsLibrary.csproj" />
   </ItemGroup>
 </Project>
