--- a/CvUpSolution/CvsWorkerService/CvsWorkerService.csproj
+++ b/CvUpSolution/CvsWorkerService/CvsWorkerService.csproj
@@ -16,5 +16,6 @@
     <ProjectReference Include="..\CvsPositionsLibrary\CvsPositionsLibrary.csproj" />
     <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
     <ProjectReference Include="..\ImportCvsLibrary\ImportCvsLibrary.csproj" />
+    <ProjectReference Include="..\LuceneLibrary\LuceneLibrary.csproj" />
   </ItemGroup>
 </Project>
