--- a/CvUpSolution/CvsWorkerService/appsettings.json
+++ b/CvUpSolution/CvsWorkerService/appsettings.json
@@ -1,13 +1,18 @@
 {
+  "GlobalSettings": {
+    "CvsFilesRootFolder": "C:\\CvUpCvs\\",
+    "LuceneIndexesRootFolder": "C:\\CvUpIndexes\\",
+    "ImportMailAddress": "cvup.files",
+    "ImportMailPassword": "vinrkkgwgvsylilr",
+    "GmailUserName": "cvup.files",
+    "GmailPassword": "vinrkkgwgvsylilr",
+    "MailFromName": "CvUp",
+    "MailFromAddress": "cvup.files@gmail.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AppSettings": {
-    "ImportMailAddress": "cvup.files",
-    "ImportMailPassword": "vinrkkgwgvsylilr",
-    "CvFilesPath": "C:\\CvUpFiles\\"
   }
 }
