--- a/CvUpSolution/IndexCvsConsoleApp/appsettings.json
+++ b/CvUpSolution/IndexCvsConsoleApp/appsettings.json
@@ -1,7 +1,7 @@
 {
   "GlobalSettings": {
-    "CvsFilesRootFolder": "C:\\CvUpCvs\\",
-    "LuceneIndexesRootFolder": "C:\\CvUpIndexes\\",
+    "CvsFilesRootFolder": "C:\\CvUpCvs",
+    "LuceneIndexesRootFolder": "C:\\CvUpIndexes",
     "ImportMailAddress": "cvup.files",
     "ImportMailPassword": "vinrkkgwgvsylilr",
     "GmailUserName": "cvup.files",
