--- a/CvUpSolution/IndexCvsConsoleApp/appsettings.json
+++ b/CvUpSolution/IndexCvsConsoleApp/appsettings.json
@@ -7,6 +7,7 @@
     "GmailUserName": "cvup.files",
     "GmailPassword": "vinrkkgwgvsylilr",
     "MailFromName": "CvUp",
-    "MailFromAddress": "cvup.files@gmail.com"
+    "MailFromAddress": "cvup.files@gmail.com",
+    "cvsEncryptorKey": "tamir3455yognorul878"
   }
 }
