--- a/CvUpSolution/CvUpAPI/CvUpAPI.csproj
+++ b/CvUpSolution/CvUpAPI/CvUpAPI.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\AuthLibrary\AuthLibrary.csproj" />
     <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
     <ProjectReference Include="..\EmailsLibrary\EmailsLibrary.csproj" />
+    <ProjectReference Include="..\GeneralLibrary\GeneralLibrary.csproj" />
     <ProjectReference Include="..\LuceneLibrary\LuceneLibrary.csproj" />
   </ItemGroup>
 
