--- a/CvUpSolution/CvsWorkerService/appsettings.json
+++ b/CvUpSolution/CvsWorkerService/appsettings.json
@@ -7,7 +7,8 @@
     "GmailUserName": "cvup.files",
     "GmailPassword": "vinrkkgwgvsylilr",
     "MailFromName": "CvUp",
-    "MailFromAddress": "cvup.files@gmail.com"
+    "MailFromAddress": "cvup.files@gmail.com",
+    "cvsEncryptorKey": "tamir3455yognorul878"
   },
   "Logging": {
     "LogLevel": {
