--- a/CvUpSolution/IndexCvsConsoleApp/appsettings.json
+++ b/CvUpSolution/IndexCvsConsoleApp/appsettings.json
@@ -8,6 +8,6 @@
     "GmailPassword": "vinrkkgwgvsylilr",
     "MailFromName": "CvUp",
     "MailFromAddress": "cvup.files@gmail.com",
-    "cvsEncryptorKey": "tamir3455yognorul878"
+    "cvsEncryptorKey": "SD78HY8Z"
   }
 }
