--- a/CvUpSolution/CvsWorkerService/appsettings.json
+++ b/CvUpSolution/CvsWorkerService/appsettings.json
@@ -8,7 +8,7 @@
     "GmailPassword": "vinrkkgwgvsylilr",
     "MailFromName": "CvUp",
     "MailFromAddress": "cvup.files@gmail.com",
-    "cvsEncryptorKey": "tamir3455yognorul878"
+    "cvsEncryptorKey": "SD78HY8Z"
   },
   "Logging": {
     "LogLevel": {
