--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -7,9 +7,12 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.9",
+    "@react-pdf-viewer/core": "^3.9.0",
+    "@react-pdf-viewer/default-layout": "^3.9.0",
     "axios": "^1.1.3",
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
+    "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
