--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-mobx": "^0.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3030 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
