--- a/CvUpSolution/DataModelsLibrary/DataModelsLibrary.csproj
+++ b/CvUpSolution/DataModelsLibrary/DataModelsLibrary.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeneralLibrary\GeneralLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
