--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -15,6 +15,7 @@
     "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.6.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "6",
