--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@cyntler/react-doc-viewer": "^1.10.1",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/material": "^5.11.5",
     "@react-pdf-viewer/core": "^3.9.0",
     "@react-pdf-viewer/default-layout": "^3.9.0",
     "axios": "^1.1.3",
@@ -21,6 +22,8 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "stylis": "^4.1.3",
+    "stylis-plugin-rtl": "^2.1.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
