--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -11,6 +11,7 @@
     "@react-pdf-viewer/core": "^3.9.0",
     "@react-pdf-viewer/default-layout": "^3.9.0",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
     "pdfjs-dist": "^3.1.81",
