--- a/CvUpSolution/ImportCvsLibrary/ImportCvsLibrary.csproj
+++ b/CvUpSolution/ImportCvsLibrary/ImportCvsLibrary.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CvsPositionsLibrary\CvsPositionsLibrary.csproj" />
+    <ProjectReference Include="..\CandsPositionsLibrary\CandsPositionsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
