--- a/CvUpSolution/IndexCvsConsoleApp/IndexCvsConsoleApp.csproj
+++ b/CvUpSolution/IndexCvsConsoleApp/IndexCvsConsoleApp.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CvsPositionsLibrary\CvsPositionsLibrary.csproj" />
+    <ProjectReference Include="..\CandsPositionsLibrary\CandsPositionsLibrary.csproj" />
     <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
     <ProjectReference Include="..\LuceneLibrary\LuceneLibrary.csproj" />
   </ItemGroup>
