--- a/CvUpSolution/CvUpAPI/Properties/launchSettings.json
+++ b/CvUpSolution/CvUpAPI/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7217;http://localhost:5217"
+      "applicationUrl": "https://localhost:7218;http://localhost:5217"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -23,7 +23,9 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
-      "useSSL": true
+      "httpPort": 5000,
+      "useSSL": true,
+      "sslPort": 44375
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json",
