--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -1,6 +1,6 @@
 {
-  "appServerUrl": "http://localhost:8010/api/",
-  "appServerUrl1": "https://localhost:7218/api/",
+  "appServerUrl1": "http://localhost:8010/api/",
+  "appServerUrl": "https://localhost:7218/api/",
   "appMode": "HRDepartment",
 
   "appServerUrl3": "http://localhost:5000/api/",
