--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.11.5",
     "@react-pdf-viewer/core": "^3.9.0",
     "@react-pdf-viewer/default-layout": "^3.9.0",
+    "@types/react-window": "^1.8.5",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "mobx": "^6.6.2",
@@ -22,6 +23,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.8",
     "sass": "^1.58.0",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
