--- a/CvUpSolution/LuceneLibrary/LuceneLibrary.csproj
+++ b/CvUpSolution/LuceneLibrary/LuceneLibrary.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.Core" Version="3.7.106.34" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.104.13" />
     <PackageReference Include="Lucene.Net" Version="4.8.0-beta00016" />
     <PackageReference Include="Lucene.Net.QueryParser" Version="4.8.0-beta00016" />
   </ItemGroup>
