--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -12,6 +12,7 @@
     "@react-pdf-viewer/default-layout": "^3.9.0",
     "@types/react-window": "^1.8.5",
     "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "mobx": "^6.6.2",
     "mobx-react": "^7.5.3",
