--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -1,8 +1,8 @@
 {
-  "appServerUrl1": "http://localhost:8010/api/",
-  "appServerUrl": "https://localhost:7218/api/",
-  "appMode": "HRDepartment",
-
-  "appServerUrl3": "http://localhost:5000/api/",
-  "appMode1": "HRCompany"
+  "servers": [
+    { "apiUrl": "http://localhost:8030/api/" },
+    { "apiUrl": "http://localhost:7218/api/" },
+    { "apiUrl": "http://10.100.102.23:8030/api/" }
+  ],
+  "appMode": "HRCompany"
 }
