--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -18,6 +18,7 @@
     "mobx-react": "^7.5.3",
     "pdfjs-dist": "^3.1.81",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-icons": "^4.7.1",
