--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -48,6 +48,7 @@
   "scripts": {
     "start": "set PORT=3030 && react-scripts start",
     "build": "react-scripts build",
+    "build:deploy": "xcopy \".\\C:\\GitHub\\CvUp\\cvup-ui-app\\build\" \".\\C:\\inetpub\\wwwroot\\CvUpUI\" /e",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
