--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -1,8 +1,8 @@
 {
   "servers": [
+    { "apiUrl": "http://10.100.102.23:8030/api/" },
     { "apiUrl": "http://localhost:8030/api/" },
-    { "apiUrl": "http://localhost:7218/api/" },
-    { "apiUrl": "http://10.100.102.23:8030/api/" }
+    { "apiUrl": "http://localhost:7218/api/" }
   ],
   "appMode": "HRCompany"
 }
