--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -2,7 +2,7 @@
   "servers": [
     { "apiUrl": "http://10.100.102.23:8030/api/" },
     { "apiUrl": "http://localhost:8030/api/" },
-    { "apiUrl": "http://localhost:7218/api/" }
+    { "apiUrl": "https://localhost:7218/api/" }
   ],
   "appMode": "HRCompany"
 }
