--- a/CvUpSolution/CvsFilesConsoleApp/appsettings.json
+++ b/CvUpSolution/CvsFilesConsoleApp/appsettings.json
@@ -1,5 +1,6 @@
 {
   "GlobalSettings": {
+    "CvUpFilesRootFolder": "C:\\CvUp",
     "CvsFilesRootFolder": "C:\\CvUpCvs",
     "LuceneIndexesRootFolder": "C:\\CvUpIndexes",
     "ImportMailAddress": "cvup.files",
