--- a/CvUpSolution/IndexCvsConsoleApp/appsettings.json
+++ b/CvUpSolution/IndexCvsConsoleApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "GlobalSettings": {
-    "CvsFilesRootFolder": "C:\\CvUpCvs",
+    "CvUpFilesRootFolder": "C:\\CvUp",
     "LuceneIndexesRootFolder": "C:\\CvUpIndexes",
     "ImportMailAddress": "cvup.files",
     "ImportMailPassword": "vinrkkgwgvsylilr",
