--- a/CvUpSolution/CandsPositionsLibrary/CandsPositionsLibrary.csproj
+++ b/CvUpSolution/CandsPositionsLibrary/CandsPositionsLibrary.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CvFilesLibrary\CvFilesLibrary.csproj" />
     <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
     <ProjectReference Include="..\EmailsLibrary\EmailsLibrary.csproj" />
-    <ProjectReference Include="..\LuceneLibrary\LuceneLibrary.csproj" />
+	  <ProjectReference Include="..\LuceneLibrary\LuceneLibrary.csproj" />
   </ItemGroup>
 
 </Project>
