--- a/CvUpSolution/CvFilesLibrary/CvFilesLibrary.csproj
+++ b/CvUpSolution/CvFilesLibrary/CvFilesLibrary.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CandsPositionsLibrary\CandsPositionsLibrary.csproj" />
+    <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
   </ItemGroup>
 
 </Project>
