--- a/CvUpSolution/CvsWorkerService/appsettings.json
+++ b/CvUpSolution/CvsWorkerService/appsettings.json
@@ -1,13 +1,10 @@
 {
   "GlobalSettings": {
     "CvUpFilesRootFolder": "C:\\CvUp",
-    "LuceneIndexesRootFolder": "C:\\CvUpIndexes",
-    "ImportMailAddress": "cvup.files",
-    "ImportMailPassword": "vinrkkgwgvsylilr",
     "GmailUserName": "cvup.files",
+    "GmailAddress": "cvup.files@gmail.com",
     "GmailPassword": "vinrkkgwgvsylilr",
     "MailFromName": "CvUp",
-    "MailFromAddress": "cvup.files@gmail.com",
     "cvsEncryptorKey": "SD78HY8Z"
   },
   "Logging": {
