--- a/CvUpSolution/CvUpAPI/appsettings.json
+++ b/CvUpSolution/CvUpAPI/appsettings.json
@@ -1,9 +1,15 @@
 {
   "GlobalSettings": {
     "CvUpFilesRootFolder": "C:\\CvUp",
+
     "GmailUserName": "cvup.files",
     "GmailAddress": "cvup.files@gmail.com",
     "GmailPassword": "vinrkkgwgvsylilr",
+
+    //"GmailUserName": "jobs.lomda",
+    //"GmailAddress": "jobs.lomda@gmail.com",
+    //"GmailPassword": "mynicwtkqjzdykgn",
+
     "MailFromName": "CvUp",
     "cvsEncryptorKey": "SD78HY8Z"
   },
