--- a/CvUpSolution/CvUpAPI/appsettings.json
+++ b/CvUpSolution/CvUpAPI/appsettings.json
@@ -2,15 +2,19 @@
   "GlobalSettings": {
     "CvUpFilesRootFolder": "C:\\CvUp",
 
-    "GmailUserName": "cvup.files",
-    "GmailAddress": "cvup.files@gmail.com",
-    "GmailPassword": "vinrkkgwgvsylilr",
+    "SystemGmailUserName": "cvup.files",
+    "SystemGmailAddress": "cvup.files@gmail.com",
+    "SystemGmailPassword": "vinrkkgwgvsylilr",
+    "SystemMailFromName": "CvUp",
 
-    //"GmailUserName": "jobs.lomda",
-    //"GmailAddress": "jobs.lomda@gmail.com",
-    //"GmailPassword": "mynicwtkqjzdykgn",
+    "ImportGmailUserName": "cvup.files",
+    "ImportGmailAddress": "cvup.files@gmail.com",
+    "ImportGmailPassword": "vinrkkgwgvsylilr",
 
-    "MailFromName": "CvUp",
+    //"ImportGmailUserName": "jobs.lomda",
+    //"ImportGmailAddress": "jobs.lomda@gmail.com",
+    //"ImportGmailPassword": "mynicwtkqjzdykgn",
+
     "cvsEncryptorKey": "SD78HY8Z"
   },
   "Logging": {
