--- a/CvUpSolution/CvUpAPI/appsettings.json
+++ b/CvUpSolution/CvUpAPI/appsettings.json
@@ -26,8 +26,9 @@
   "Jwt": {
     "SecretKey": "78yfhO:LDG-789%$sdf^d&",
     "Issuer": "Tamir",
-    "Audience": "https://localhost:7217",
-    "Subject": "JWTServiceAccessToken"
+    "Audience": "http://82.166.239.93:8020",
+    "Subject": "JWTServiceAccessToken",
+    "RefreshTokenHoursExpiration": "24"
   },
   "AllowedHosts": "*"
 
