--- a/CvUpSolution/CvsWorkerService/appsettings.json
+++ b/CvUpSolution/CvsWorkerService/appsettings.json
@@ -7,13 +7,13 @@
     "SystemGmailPassword": "vinrkkgwgvsylilr",
     "SystemMailFromName": "CvUp",
 
-    "ImportGmailUserName": "cvup.files",
-    "ImportGmailAddress": "cvup.files@gmail.com",
-    "ImportGmailPassword": "vinrkkgwgvsylilr",
+    //"ImportGmailUserName": "cvup.files",
+    //"ImportGmailAddress": "cvup.files@gmail.com",
+    //"ImportGmailPassword": "vinrkkgwgvsylilr",
 
-    //"ImportGmailUserName": "jobs.lomda",
-    //"ImportGmailAddress": "jobs.lomda@gmail.com",
-    //"ImportGmailPassword": "wbebqqqbecpkrruf",
+    "ImportGmailUserName": "jobs.lomda",
+    "ImportGmailAddress": "jobs.lomda@gmail.com",
+    "ImportGmailPassword": "wbebqqqbecpkrruf",
 
     "cvsEncryptorKey": "SD78HY8Z"
   },
