--- a/CvUpSolution/ImportCvsLibrary/ImportCvsLibrary.csproj
+++ b/CvUpSolution/ImportCvsLibrary/ImportCvsLibrary.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FreeSpire.PDF" Version="8.6.0" />
     <PackageReference Include="MailKit" Version="4.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.EventLog" Version="7.0.0" />
     <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
   </ItemGroup>
 
