--- a/CvUpSolution/CandsPositionsLibrary/CandsPositionsLibrary.csproj
+++ b/CvUpSolution/CandsPositionsLibrary/CandsPositionsLibrary.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Cloud.Translate.V3" Version="3.3.0" />
+    <PackageReference Include="Nito.AsyncEx.Coordination" Version="5.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CvFilesLibrary\CvFilesLibrary.csproj" />
     <ProjectReference Include="..\DataModelsLibrary\DataModelsLibrary.csproj" />
     <ProjectReference Include="..\EmailsLibrary\EmailsLibrary.csproj" />
