--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -3,7 +3,7 @@
     { "apiUrl": "http://10.100.102.23:8030/api/" },
     { "apiUrl": "http://82.166.239.93:8030/api/" },
     { "apiUrl": "http://localhost:8030/api/" },
-    { "apiUrl": "https://localhost:7218/api/" }
+    { "apiUrl": "http://localhost:7218/api/" }
   ],
   "appMode": "HRCompany"
 }
