--- a/CvUpSolution/CvUpAPI/Properties/launchSettings.json
+++ b/CvUpSolution/CvUpAPI/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7218;http://localhost:5217"
+      "applicationUrl": "http://localhost:7218;http://localhost:5217"
     },
     "IIS Express": {
       "commandName": "IISExpress",
