--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -3,6 +3,9 @@
     { "apiUrl": "http://10.100.102.23:8030/api/" },
     { "apiUrl": "http://82.166.239.93:8030/api/" },
     { "apiUrl": "http://localhost:8030/api/" },
+    { "apiUrl": "http://10.100.102.23:8079/api/" },
+    { "apiUrl": "http://82.166.239.93:8079/api/" },
+    { "apiUrl": "http://localhost:8079/api/" },
     { "apiUrl": "http://localhost:7218/api/" }
   ],
   "appMode": "HRCompany"
