gdrive appsettings moved to jobs lomda

--- a/CvUpSolution/CvUpAPI/appsettings.json
+++ b/CvUpSolution/CvUpAPI/appsettings.json
@@ -1,6 +1,7 @@
 {
   "GlobalSettings": {
-    "CvUpFilesRootFolder": "C:\\CvUp",
+    //"CvUpFilesRootFolder": "C:\\CvUp",
+    "CvUpFilesRootFolder": "C:\\JobsLomda-GDrive\\CvUp",
 
     "SystemGmailUserName": "cvup.files",
     "SystemGmailAddress": "cvup.files@gmail.com",
