--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -1,12 +1,26 @@
 {
   "servers": [
-    { "apiUrl": "http://82.166.239.93:8079/api/" },
-    { "apiUrl": "http://82.166.239.93:8030/api/" },
-    { "apiUrl": "http://10.100.102.26:8030/api/" },
-    { "apiUrl": "http://localhost:8030/api/" },
-    { "apiUrl": "http://10.100.102.26:8079/api/" },
-    { "apiUrl": "http://localhost:8079/api/" },
-    { "apiUrl": "http://localhost:7218/api/" }
+    {
+      "apiUrl": "http://82.166.239.93:8079/api/"
+    },
+    {
+      "apiUrl": "http://10.100.102.26:8079/api/"
+    },
+    {
+      "apiUrl": "http://localhost:8079/api/"
+    },
+    {
+      "apiUrl": "http://82.166.239.93:8070/api/"
+    },
+    {
+      "apiUrl": "http://10.100.102.30:8070/api/"
+    },
+    {
+      "apiUrl": "http://localhost:8070/api/"
+    },
+    {
+      "apiUrl": "http://localhost:7218/api/"
+    }
   ],
   "appMode": "HRCompany"
 }
