--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -19,6 +19,15 @@
       "apiUrl": "http://localhost:8070/api/"
     },
     {
+      "apiUrl": "http://82.166.239.93:8010/api/"
+    },
+    {
+      "apiUrl": "http://10.100.102.20:8010/api/"
+    },
+    {
+      "apiUrl": "http://localhost:8010/api/"
+    },
+    {
       "apiUrl": "http://localhost:7218/api/"
     }
   ],
