--- a/CvUpSolution/CvsFilesConsoleApp/appsettings.json
+++ b/CvUpSolution/CvsFilesConsoleApp/appsettings.json
@@ -2,6 +2,7 @@
   "GlobalSettings": {
     //"CvUpFilesRootFolder": "C:\\CvUp",
     "CvUpFilesRootFolder": "C:\\JobsLomda-GDrive\\CvUp",
+    "CvUp-not-backed-up-Root-Folder": "C:\\CvUp",
 
     "SystemGmailUserName": "cvup.files",
     "SystemGmailAddress": "cvup.files@gmail.com",
