--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -1,5 +1,14 @@
 {
   "servers": [
+     {
+      "apiUrl": "http://82.166.239.93:8056/api/"
+    },
+    {
+      "apiUrl": "http://10.100.102.2:8056/api/"
+    },
+    {
+      "apiUrl": "http://localhost:8056/api/"
+    },
     {
       "apiUrl": "http://82.166.239.93:8079/api/"
     },
