--- a/cvup-ui-app/package.json
+++ b/cvup-ui-app/package.json
@@ -23,6 +23,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-google-charts": "^5.2.1",
     "react-icons": "^4.7.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "6",
