--- a/cvup-ui-app/public/appSettings.json
+++ b/cvup-ui-app/public/appSettings.json
@@ -1,6 +1,6 @@
 {
   "servers": [
-     {
+    {
       "apiUrl": "http://82.166.239.93:8056/api/"
     },
     {
@@ -23,6 +23,9 @@
     },
     {
       "apiUrl": "http://10.100.102.30:8070/api/"
+    },
+    {
+      "apiUrl": "http://10.100.102.21:8070/api/"
     },
     {
       "apiUrl": "http://localhost:8070/api/"
